<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/StarterToolbar"
        android:layout_width="420dp"
        android:layout_height="56dp"
        android:layout_marginStart="1dp"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Main Menu"
        app:titleTextColor="#FFFFFF" />

    <androidx.cardview.widget.CardView
        android:id="@+id/starterAddStudentCV"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="70dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/StarterToolbar"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/starterAddStudentButton"
            android:layout_width="160dp"
            android:layout_height="140dp"
            android:background="@drawable/button_setter"
            android:text="@string/addstudent"
            android:textColor="@color/design_default_color_on_primary" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/starterAddCourseCV"
        android:layout_width="170dp"
        android:layout_marginRight="70dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/starterAddLecturerCV"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/starterAddCourseButton"
            android:layout_width="160dp"
            android:layout_height="140dp"
            android:background="@drawable/button_enabled"
            android:text="@string/addcourse"
            android:textColor="@color/design_default_color_on_primary" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/starterAddLecturerCV"
        android:layout_width="170dp"
        android:layout_marginRight="170dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/starterAddStudentCV"
        app:layout_constraintVertical_bias="0.0">



        <Button
            android:id="@+id/starterAddLecturerButton"
            android:layout_width="160dp"
            android:layout_height="140dp"
            android:background="@drawable/button_enabled"
            android:text="@string/addlecturer"
            android:textColor="@color/design_default_color_on_primary" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/starterLoginStudentCV"
        android:layout_width="170dp"
        android:layout_marginRight="170dp"
        android:layout_marginLeft="170dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/starterAddCourseCV"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/starterLoginStudentButton"
            android:layout_width="160dp"
            android:layout_height="140dp"
            android:background="@drawable/button_enabled"
            android:text="@string/login"
            android:textColor="@color/design_default_color_on_primary" />


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>